fix: The container in the desktop version is aligned

--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@
 
 .container__title--heading-three {
   font-size: 2.4rem;
-  margin-top: 4.8rem;
+  margin-top: 3.6rem;
 }
 
 .container__paragraph {
@@ -94,6 +94,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.container__wrapper--mh30 {
+  min-height: 30rem;
 }
 
 .container__btn {
